# filtering-proxy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  connect.sh  quick-start.sh
common/: aes-128.c  aes-128.h  cbor.c  cbor.h  ccm-star.c  ccm-star.h  cose.c  cose.h  filtering_ocall.h  list.c  list.h  oscore.c  oscore.h  oscore_ng.c  oscore_ng.h  report.c  report.h  sha-256.c  sha-256.h
common/coap3/: coap_internal.h  coap_libcoap_build.h
filtering_enclave/: CMakeLists.txt  aes-128.c  app.lds  attestation_service.c  attestation_service.h  crypto.c  crypto.h  filtering_enclave.c  filtering_ocall_client.c  filtering_ocall_client.h  iot_client.c  iot_client.h  iot_message.c  iot_message.h  leaky-bucket.c  leaky-bucket.h  list.c  list.h  log.c  log.h  memory.c  ocall_dispatcher.c  oscore_filter.c  oscore_filter.h  oscore_ng_filter.c  oscore_ng_filter.h  proxied_request.c  proxied_request.h  registration.c  registration.h  sha-256.c  sha-256.h
filtering_host_app/: AttestationReport.cpp  AttestationReport.hpp  CoapServer.cpp  CoapServer.hpp  EnclaveLogger.cpp  EnclaveLogger.hpp  Ocall.cpp  Ocall.hpp  OcallDispatcher.cpp  OcallDispatcher.hpp  OcallFactory.cpp  OcallFactory.hpp  PduFactory.cpp  PduFactory.hpp  ProxiedRequest.cpp  ProxiedRequest.hpp  Referenceable.cpp  Registration.cpp  Registration.hpp  Request.cpp  Request.hpp  filtering_host_app.cpp  libcoap.inc  micro_ecc.inc
host_app/: Bakery.cpp  Bakery.hpp  CoapServer.cpp  CoapServer.hpp  EnclaveLogger.cpp  EnclaveLogger.hpp  IotRequest.cpp  IotRequest.hpp  Ocall.cpp  Ocall.hpp  OcallDispatcher.cpp  OcallDispatcher.hpp  OcallFactory.cpp  OcallFactory.hpp  PduFactory.cpp  PduFactory.hpp  ProxiedRequest.cpp  ProxiedRequest.hpp  Referenceable.cpp  Referenceable.hpp  RegistrantRequest.cpp  RegistrantRequest.hpp  Registration.cpp  Registration.hpp  Request.cpp  Request.hpp  main.cpp
overlay/: 10-eth0.network  interfaces  run.sh
tamarin/: ra.spthy
tee/: app.lds  attestation_service.c  attestation_service.h  clock.c  clock.h  coap.c  coap.h  iot_client.c  iot_client.h  iot_message.c  iot_message.h  leaky-bucket.c  leaky-bucket.h  log.c  log.h  main.c  memb.c  memb.h  memory.c  memory.h  ocall_dispatcher.c  ocall_dispatcher.h  oscore_ng_filter.c  oscore_ng_filter.h  registration.c  registration.h  report.c
